# RedBox

./: README.md
LexBox/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
LexBox/docs/: ipc-inventory.md  migration-architecture.md  migration-blueprint.md
LexBox/scripts/: extract-ipc-inventory.mjs
LexBox/shared/: localAsset.ts  modelCapabilities.ts  redboxVideo.ts
LexBox/src/: App.tsx  index.css  main.tsx  types.d.ts
LexBox/src-tauri/: Cargo.toml  tauri.conf.json
LexBox/src-tauri/capabilities/: default.json
LexBox/src-tauri/src/: main.rs  router.rs
LexBox/src/bridge/: ipcRenderer.ts
LexBox/src/components/: ErrorBoundary.tsx  FirstRunTour.tsx  index.ts  (+8 more)
Plugin/: README.md  background.js  manifest.json  package-plugin.sh  pageObserver.js  pageRouteBridge.js  popup.css  popup.html  popup.js  settings.css  settings.html  settings.js  sidepanel.css  sidepanel.html  sidepanel.js  xhsBridge.js
Plugin/docs/: xhs-blogger-notes-fix-prompt.md  xhs-sidepanel-collector-upgrade-plan.md
RedBoxweb/: README.md
desktop/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/Docs/: video-auto-edit-implementation-plan.md
desktop/electron/: db.ts  main.ts  preload.ts
desktop/release-notes/: v1.8.7.zh-CN.md
desktop/scripts/: start-weixin-sidecar.cjs  weixin-claw-relay.mjs
desktop/shared/: manuscriptFiles.ts  modelCapabilities.ts  modelProfiles.json
desktop/src/: App.tsx  README.md  index.css  main.tsx  types.d.ts
private/Docs/: api.md
private/scripts/: release-all.sh
(+263 files in other folders)
