[package]
name = "lexbox"
version = "0.1.0"
description = "Rust host for the RedConvert desktop migration"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
arboard = "3.4.1"
dirs = "5.0.1"
open = "5.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }

[features]
default = []
